# YSFClients

./: .gitignore  Makefile  README.md
YSFGateway/: APRSWriter.cpp  APRSWriter.h  CMakeLists.txt  GitVersion.h.in  Makefile  YSFHostsUpdate.sh
YSFGateway/cmake/Modules/: FindLibGPS.cmake  GitVersion.cmake
YSFGateway/systemd/: ysfgateway.service
